# opencnn

./: .gitignore  Converting python model and running in C.docx  README.md  Setting up environment for AI.docx
face/: batch_normalization_10_mean.npy  batch_normalization_10_mm.npy  batch_normalization_10_mv.npy  batch_normalization_1_beta.npy  batch_normalization_1_mm.npy  batch_normalization_1_mv.npy  batch_normalization_1_variance.npy  batch_normalization_2_beta.npy  batch_normalization_2_mm.npy  batch_normalization_3_gamma.npy  batch_normalization_3_mean.npy  batch_normalization_3_mv.npy  batch_normalization_4_beta.npy  batch_normalization_4_mean.npy  batch_normalization_4_variance.npy  batch_normalization_5_gamma.npy  batch_normalization_5_mean.npy  batch_normalization_5_mv.npy  batch_normalization_5_variance.npy  batch_normalization_6_beta.npy  batch_normalization_6_gamma.npy  batch_normalization_6_mv.npy  batch_normalization_6_variance.npy  batch_normalization_7_beta.npy  batch_normalization_7_mean.npy  batch_normalization_7_mm.npy  batch_normalization_7_mv.npy  batch_normalization_7_variance.npy  batch_normalization_8_beta.npy  batch_normalization_8_mean.npy  batch_normalization_8_mm.npy  batch_normalization_8_mv.npy  batch_normalization_9_mean.npy  batch_normalization_9_variance.npy  batch_normalization_gamma.npy  conv2d_11_weights.npy  conv2d_12_bias.npy  conv2d_12_weights.npy  conv2d_13_bias.npy  conv2d_14_bias.npy  (+7 more)
kernels/: add.cl  argmax.cl  batchnormalization.cl  batchnormalization1.cl  convolution.cl  convolutionBiasTransposed.cl  deconvolution.cl  deconvolution3x3.cl  depthwiseBias.cl  leakyrelu.cl  pointwise.cl  pointwiseBias.cl  pointwiseBias1.cl  preprocess.cl  resize.cl  resize_normal.cl  sigmoid.cl  softmax1.cl  softmax2.cl
models/face/: batch_normalization_10_beta.npy  batch_normalization_10_gamma.npy  batch_normalization_10_variance.npy  batch_normalization_1_gamma.npy  batch_normalization_1_mean.npy  batch_normalization_2_gamma.npy  batch_normalization_2_mean.npy  batch_normalization_2_mv.npy  batch_normalization_2_variance.npy  batch_normalization_3_beta.npy  batch_normalization_3_mm.npy  batch_normalization_3_variance.npy  batch_normalization_4_gamma.npy  batch_normalization_4_mm.npy  batch_normalization_4_mv.npy  batch_normalization_5_beta.npy  batch_normalization_5_mm.npy  batch_normalization_6_mean.npy  batch_normalization_6_mm.npy  batch_normalization_7_gamma.npy  batch_normalization_8_gamma.npy  batch_normalization_8_variance.npy  batch_normalization_9_beta.npy  batch_normalization_9_gamma.npy  batch_normalization_9_mm.npy  batch_normalization_9_mv.npy  batch_normalization_beta.npy  batch_normalization_mean.npy  batch_normalization_mm.npy  batch_normalization_mv.npy  batch_normalization_variance.npy  conv2d_10_weights.npy  conv2d_13_weights.npy  conv2d_14_weights.npy  conv2d_7_weights.npy  decoded_output_anchors.npy  face.txt
project/: CMakeLists.txt  Segmentation.sln  _clang-format
project/SegmentMain/: SegmentMain.vcxproj  SegmentMain.vcxproj.filters  bmpreader.cpp  bmpreader.h  main.cpp
project/SegmentMain/SemanticSegmentation/: SemanticSegmentationAPI.h
project/SemanticSegmentation/: IGlobalContext.h  ILayerContext.h  LinkedList.h  SemanticSegmentation.vcxproj  SemanticSegmentation.vcxproj.filters  SemanticSegmentationAPI.cpp  add.cpp  add.h  argmax.cpp  argmax.h  batchNormalization.cpp  batchNormalization.h  batchNormalization1.cpp  batchNormalization2.cpp  batchNormalization2.h  bmpreader.cpp  concatenation.cpp  convolutionLayer.cpp  convolutionLayer.h  csvReader.cpp  dataContainerBase.h  dataContainerFloat.cpp  deconvolutionLayer.h  deconvolutionLayer3X3.h  depthwiseConvolutionBiasLayer.cpp  depthwiseConvolutionLayer.h  globalContext.cpp  globalContext.h  graph.cpp  graph.h  input.h  layer.h  layerContext.cpp  layerFactory.cpp  layerFactory.h  leakyrelu.cpp  leakyrelu.h  logger.cpp  logger.h  maxpool.cpp  (+15 more)
project/SemanticSegmentation/opencl/include/CL/: cl_ext.h
project/SemanticSegmentation/opencl/lib/x64/: oclUtils64D.lib
project/app/: CMakeLists.txt  main.cpp
project/openclnn/: CMakeLists.txt
project/openclnn/include/: IGlobalContext.h  batchNormalization1.h  bmpreader.h  concatenation.h  convolutionLayerBias.h  csvReader.h  dataContainerFloat.h  dataContainerOpenCLFloat.h  depthwiseConvolutionBiasLayer.h  globalContext.h  graph.h  imageResize.h  layer.h  layerContext.h  logger.h  padding.h  pointwiseConvolutionLayerBias.h  relu.h  softmax.h  ssdDecoder.h
project/openclnn/include/openclnn/: IGraph.h  openclnn.h
project/openclnn/kernels/: add.cl  batchnormalization2.cl  concatenation.cl  convolutionBias.cl  depthwise.cl  maxpool.cl  padding.cl  relu.cl  resizelayer.cl
project/openclnn/src/: SemanticSegmentationAPI.cpp  add.cpp  argmax.cpp  batchNormalization.cpp  batchNormalization1.cpp  batchNormalization2.cpp  concatenation.cpp  convolutionLayer.cpp  convolutionLayerBias.cpp  dataContainerOpenCLFloat.cpp  deconvolutionLayer.cpp  deconvolutionLayer3X3.cpp  depthwiseConvolutionLayer.cpp  globalContext.cpp  graph.cpp  imageResize.cpp  input.cpp  layer.cpp  leakyrelu.cpp  maxpool.cpp  openclnn.cpp  padding.cpp  pointwiseConvolutionLayer.cpp  pointwiseConvolutionLayerBias.cpp  relu.cpp  sigmoidLayer.cpp  softmax.cpp  yoloDecoder.cpp  yoloSeperateDecoder.cpp
scripts/batch/: run.bat
scripts/python/: model_converter.py
scripts/shell/: clear_bin_files.sh
